--- a/src/index.html
+++ b/src/index.html
@@ -12,17 +12,28 @@
     />
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
-  <body>
-    <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
+  <body style="background-color: green;">
+    <div class="container-fluid d-flex justify-content-center">
+      <div
+        class="w-25 my-5 rounded"
+        style="height: 700px; background-color: white;"
+      >
+        <div class="card text-center">
+          <div class="card-header d-flex justify-content-star">
+            <div class="simbol">♦</div>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Special title treatment</h5>
+            <p class="card-text">
+              With supporting text below as a natural lead-in to additional
+              content.
+            </p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+          <div class="card-footer d-flex justify-content-end">
+            <div class="simbol">♦</div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
