continuacion de codificacion de diseño de carta en index.thml

--- a/src/index.html
+++ b/src/index.html
@@ -1,40 +1,36 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hello Rigo with Vanilla.js</title>
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
-      integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
+        integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous" />
     <link rel="shortcut icon" href="./4geeks.ico" />
-  </head>
-  <body style="background-color: green;">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+</head>
+
+<body style="background-color: green;">
     <div class="container-fluid d-flex justify-content-center">
-      <div
-        class="w-25 my-5 rounded"
-        style="height: 700px; background-color: white;"
-      >
-        <div class="card text-center">
-          <div class="card-header d-flex justify-content-star">
-            <div class="simbol">♦</div>
-          </div>
-          <div class="card-body">
-            <h5 class="card-title">Special title treatment</h5>
-            <p class="card-text">
-              With supporting text below as a natural lead-in to additional
-              content.
-            </p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-          <div class="card-footer d-flex justify-content-end">
-            <div class="simbol">♦</div>
-          </div>
+
+        <div class="w-25 my-5 rounded" style="height: 700px; background-color: white;">
+
+            <div class="border border-1 d-flex justify-content-star">
+                <div class="simbol" id="simbol">♦</div>
+            </div>
+
+            <div class="text-center">
+                <h1 class="display-1" id="number">1</h1>
+            </div>
+
+
+            <div class="border border-1 d-flex justify-content-end">
+                <div class="simbol" id="simbol">♦</div>
+            </div>
         </div>
-      </div>
     </div>
-  </body>
+    </div>
+</body>
+
 </html>
