--- a/src/index.html
+++ b/src/index.html
@@ -1,36 +1,40 @@
 <!DOCTYPE html>
-<html>
-
-<head>
+<html lang="en">
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello Rigo with Vanilla.js</title>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
-        integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous" />
-    <link rel="shortcut icon" href="./4geeks.ico" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-</head>
+    <title>Generador de Cartas</title>
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body style="background-color: green;">
+  <body class="bg-success">
     <div class="container-fluid d-flex justify-content-center">
-
-        <div class="w-25 my-5 rounded" style="height: 700px; background-color: white;">
-
-            <div class="border border-1 d-flex justify-content-star">
-                <div class="simbol" id="simbol">♦</div>
-            </div>
-
-            <div class="text-center">
-                <h1 class="display-1" id="number">1</h1>
-            </div>
-
-
-            <div class="border border-1 d-flex justify-content-end">
-                <div class="simbol" id="simbol">♦</div>
-            </div>
+      <div class="card-container w-25 my-5 rounded bg-white">
+        <div class="d-flex justify-content-start">
+          <div class="simbol" id="simbol">♦</div>
         </div>
+        <div class="text-center">
+          <h1 class="display-1" id="number">1</h1>
+        </div>
+        <div class="d-flex justify-content-end">
+          <div class="simbol" id="simbol">♦</div>
+        </div>
+      </div>
     </div>
+    <div class="text-center">
+      <button id="btnGenrar" class="btn btn-warning mt-3 fs-1">
+        Generar Carta
+      </button>
     </div>
-</body>
-
+  </body>
 </html>
